--- a/today.html
+++ b/today.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="spinner"></div>
         <div class="date-badge" id="todayDate">TODAY</div>
-        <h1>MIDAS Attendance</h1>
+        <h1>MIDAS Print આજની હાજરી</h1>
         <p>Redirecting to today's attendance...</p>
         <p>Please wait a moment.</p>
         
