--- a/yesterday.html
+++ b/yesterday.html
@@ -98,7 +98,7 @@
     <div class="container">
         <div class="spinner"></div>
         <div class="date-badge" id="yesterdayDate">YESTERDAY</div>
-        <h1>MIDAS Attendance</h1>
+        <h1>MIDAS ગઈકાલની હાજરી</h1>
         <p>Redirecting to yesterday's attendance...</p>
         <p>Please wait a moment.</p>
         
